tdf#112008 Assert when starting an empty slideshow

Init() is called via at least two different code patchs,
from BasicViewFactory::CreateView and
PresentationViewShell::FinishInitialization.

But we only call EndListening() once in the destructor, so lets just
check before calling StartListening()

Change-Id: Ia6757a17934cc2665c635e21ee0305a810c624c1